Better style.css

--- a/style.css
+++ b/style.css
@@ -135,6 +135,10 @@ footer a:hover {
     }
 
     .content {
-        width: 90%;
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+
     }
 }
